--- a/OdenRenderingEngine.vcxproj
+++ b/OdenRenderingEngine.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="mesh.cpp" />
     <ClCompile Include="pointLight.cpp" />
     <ClCompile Include="shader.cpp" />
+    <ClCompile Include="spotLight.cpp" />
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
@@ -159,6 +160,7 @@
     <ClInclude Include="mesh.h" />
     <ClInclude Include="pointLight.h" />
     <ClInclude Include="shader.h" />
+    <ClInclude Include="spotLight.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="window.h" />
   </ItemGroup>
