--- a/OdenRenderingEngine.vcxproj.filters
+++ b/OdenRenderingEngine.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="pointLight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="spotLight.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mesh.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pointLight.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="spotLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
