--- a/OdenRenderingEngine.vcxproj.filters
+++ b/OdenRenderingEngine.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="shadowMap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="omniShadowMap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mesh.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="shadowMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="omniShadowMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
