--- a/OdenRenderingEngine.vcxproj
+++ b/OdenRenderingEngine.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="pointLight.cpp" />
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="shadowMap.cpp" />
+    <ClCompile Include="skybox.cpp" />
     <ClCompile Include="spotLight.cpp" />
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="window.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="pointLight.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="shadowMap.h" />
+    <ClInclude Include="skybox.h" />
     <ClInclude Include="spotLight.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="window.h" />
